13. Make button edges fully rounded.
14. Add border to buttons in fulscreen dialogs.
15. Tweak tab appearance.
16. If using desktop layout on iOS and page is alseep for more than 15 seconds
    then when awake switch to mobile and immediately back to desktop to
    attempt to work-around issues (#589).
17. (Hopefully) fixed disappearing items.

2.9.8
-----
1. Adjust desktop layout code to try to fix Safari issues (#589)
2. Fix missing queue menu items (Transfer queue, etc).

2.9.7
-----
1. Fix track source not always showing.
2. Fix add/play all on Spotty album lists.
3. Fix disappearing text items when navigate back.
4. Don't show queue, etc, menu items in main menu when now playing is expanded
   or showing track info.
5. Don't show queue menu items in main menu when on desktop layout and queue
   is hidden.
6. Always place 'Transfer queue', 'Scroll to current', and 'Add URL' in main
   menu.

2.9.6
-----
1. Use history length to determine if back button should be shown or not.
2. Long-press on player's icon (in main toolbar) to show sync dialog.
3. Allow multi-line text entries in browse view list.
4. Allow queue custom actions to list items in browse view.

2.9.5
------
1. For LMS 8.3 add album-artist when favouriting an album.
2. Fix add/play all for mixes when called from custom action.
3. Reduce dialog buttons min-width if screen is 400px or less.
4. Always use HTML for 'textarea' values.
5. For mobile devices add a search button at the right of search fields
   containing text.

2.9.4
-----
 1. Allow 'lmsbrowse' custom actions from now-playing.
 2. Remove space between star ratings so that eliding works better.
 3. Use bold font for titles of other servers in 'Manage players' dialog.
 4. Long-press on count/duration in queue to show transfer queue dialog.
 5. Reduce frequency of status polling during playback.
 6. Don't send a status message for a player if one is already being processed
    by LMS.